--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -52,5 +52,4 @@ jobs:
         run: |
           ./scripts/release.sh \
             --channel "${{ github.event.inputs.channel || 'nightly' }}" \
-            --dist "./build-output" \
-            --target aarch64-unknown-linux-gnu
+            --dist "./build-output"
