fix: action test 6

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -53,3 +53,4 @@ jobs:
           ./scripts/release.sh \
             --channel "${{ github.event.inputs.channel || 'nightly' }}" \
             --dist "./build-output"
+            --version "${{ env.version }}"
