--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,53 +1,56 @@
-name: Build Tauri ARM64
-
+name: Linux ARM64 Build
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
+    inputs:
+      channel:
+        description: Build channel
+        required: true
+        default: nightly
+        type: choice
+        options: [release, nightly]
+      bump:
+        description: Version bump type
+        required: true
+        default: patch
+        type: choice
+        options: [patch, minor, major]
 
 jobs:
-  build-arm64:
+  build-sveltekit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Init Node Environment
+        uses: ./.github/actions/init-env-node  # 使用原始配置的初始化方法
 
-      # 设置 Rust 环境
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          target: aarch64-unknown-linux-gnu
-          override: true
+      - name: Set build mode
+        run: |
+          MODE="nightly"
+          [[ "${{ github.event.inputs.channel }}" == "release" ]] && MODE="production"
+          echo "BUILD_MODE=$MODE" >> $GITHUB_ENV
 
-      # 安装 ARM64 系统依赖（关键步骤）
-      - name: Install cross-compile deps
+      - name: Build SvelteKit
+        run: pnpm build:desktop -- --mode ${{ env.BUILD_MODE }}
+
+  build-tauri:
+    needs: build-sveltekit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Init Node Environment
+        uses: ./.github/actions/init-env-node
+
+      - name: Setup ARM64 Toolchain
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-              gcc-aarch64-linux-gnu \
-              g++-aarch64-linux-gnu \
-              libgtk-3-dev:aarch64 \
-              libwebkit2gtk-4.0-dev:aarch64 \
-              libappindicator3-dev:aarch64
+            gcc-aarch64-linux-gnu \
+            g++-aarch64-linux-gnu \
+            libc6-dev-arm64-cross
 
-      # 配置 Node.js 环境
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 22
-
-      # 安装 pnpm 和项目依赖
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Install dependencies
-        run: pnpm install
-
-      # 执行 Tauri 构建（关键步骤）
-      - name: Build for ARM64
-        run: pnpm tauri build --target aarch64-unknown-linux-gnu
-
-      # 收集构建产物
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: tauri-arm64-build
-          path: |
-            src-tauri/target/aarch64-unknown-linux-gnu/release/bundle/
+      - name: Build Tauri
+        run: |
+          ./scripts/release.sh \
+            --channel "${{ github.event.inputs.channel || 'nightly' }}" \
+            --dist "./build-output"
+            --version "${{ env.version }}"
