--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,19 +42,18 @@ jobs:
       - name: Init Node Environment
         uses: ./.github/actions/init-env-node
 
-      # 交叉编译环境配置
+      # 交叉编译工具链配置
       - name: Setup ARM64 Toolchain
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             gcc-aarch64-linux-gnu \
-            g++-aarch64-linux-gnu \
+            g++-arch64-linux-gnu \
             libc6-dev-arm64-cross \
             libgtk-3-dev:aarch64 \
             libwebkit2gtk-4.0-dev:aarch64 \
             libappindicator3-dev:aarch64
 
-          # 配置 Rust 目标
           rustup target add $RUST_TARGET
           echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
 
@@ -63,29 +62,24 @@ jobs:
         id: version
         run: |
           if [[ "${{ github.event.inputs.channel }}" == "nightly" ]]; then
-            DATE_SUFFIX=$(date +%Y%m%d)
-            echo "VERSION=0.0.0-nightly.$DATE_SUFFIX" >> $GITHUB_ENV
+            echo "VERSION=0.0.0-nightly.$(date +%Y%m%d)" >> $GITHUB_ENV
           else
-            # 这里需要替换为实际的版本号生成逻辑
-            echo "VERSION=1.0.0" >> $GITHUB_ENV
+            echo "VERSION=1.0.0" >> $GITHUB_ENV  # 需替换实际版本管理逻辑
           fi
 
-      # Tauri 直接构建
+      # Tauri 构建命令
       - name: Build Tauri
         run: |
           pnpm tauri build \
             --target $RUST_TARGET \
-            --config-path crates/gitbutler-tauri/tauri.conf.${{ github.event.inputs.channel }}.json \
+            --config "crates/gitbutler-tauri/tauri.conf.${{ github.event.inputs.channel }}.json" \
             --verbose
 
-      # 产物收集
-      - name: Collect Artifacts
-        run: |
-          mkdir -p build-output/linux/aarch64
-          cp -r src-tauri/target/$RUST_TARGET/release/bundle/* build-output/linux/aarch64/
-
+      # 修复点：更新 upload-artifact 到 v4+
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: tauri-arm64-binaries
-          path: build-output/linux/aarch64
+          name: tauri-arm64-${{ github.event.inputs.channel }}
+          path: |
+            src-tauri/target/${{ env.RUST_TARGET }}/release/bundle/*
+          retention-days: 7
