--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -48,11 +48,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             gcc-aarch64-linux-gnu \
-            g++-arch64-linux-gnu \
-            libc6-dev-arm64-cross \
-            libgtk-3-dev:aarch64 \
-            libwebkit2gtk-4.0-dev:aarch64 \
-            libappindicator3-dev:aarch64
+            g++-aarch64-linux-gnu \
+            libc6-dev-arm64-cross
 
           rustup target add $RUST_TARGET
           echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
