--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,63 +20,64 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: Init Node Environment
         uses: ./.github/actions/init-env-node
 
       - name: Set build mode
         run: |
-          MODE="nightly"
-          [[ "${{ github.event.inputs.channel }}" == "release" ]] && MODE="production"
+          [[ "${{ github.event.inputs.channel }}" == "release" ]] && MODE="production" || MODE="nightly"
           echo "BUILD_MODE=$MODE" >> $GITHUB_ENV
 
+      # 修复点1：明确设置前端输出路径
       - name: Build SvelteKit
-        run: pnpm build:desktop -- --mode ${{ env.BUILD_MODE }}
+        run: |
+          pnpm build:desktop -- --mode ${{ env.BUILD_MODE }} --outDir ../../apps/desktop/build
+          ls -la ../../apps/desktop/build  # 验证构建产物
 
   build-tauri:
     needs: build-sveltekit
     runs-on: ubuntu-latest
     env:
       RUST_TARGET: aarch64-unknown-linux-gnu
+      FRONTEND_DIST: ../../apps/desktop/build  # 明确前端路径
     steps:
       - uses: actions/checkout@v4
+      
       - name: Init Node Environment
         uses: ./.github/actions/init-env-node
 
-      # 交叉编译工具链配置
+      # 修复点2：配置多架构编译环境
       - name: Setup ARM64 Toolchain
         run: |
           sudo apt-get update
+          sudo dpkg --add-architecture arm64
           sudo apt-get install -y \
             gcc-aarch64-linux-gnu \
             g++-aarch64-linux-gnu \
-            libc6-dev-arm64-cross
+            libc6-dev-arm64-cross \
+            libgtk-3-dev:arm64 \
+            libwebkit2gtk-4.0-dev:arm64
 
           rustup target add $RUST_TARGET
           echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
 
-      # 版本号生成逻辑
-      - name: Generate Version
-        id: version
+      # 修复点3：动态注入对应架构的二进制文件
+      - name: Inject Git binaries
         run: |
-          if [[ "${{ github.event.inputs.channel }}" == "nightly" ]]; then
-            echo "VERSION=0.0.0-nightly.$(date +%Y%m%d)" >> $GITHUB_ENV
-          else
-            echo "VERSION=1.0.0" >> $GITHUB_ENV  # 需替换实际版本管理逻辑
-          fi
+          TRIPLE="${{ env.RUST_TARGET}}"
+          SRC_DIR="./target/$TRIPLE/release"
+          DEST_DIR="./crates/gitbutler-tauri"
 
-      # Tauri 构建命令
+          cp "$SRC_DIR/gitbutler-git-askpass" "$DEST_DIR/gitbutler-git-askpass-$TRIPLE"
+          cp "$SRC_DIR/gitbutler-git-setsid" "$DEST_DIR/gitbutler-git-setsid-$TRIPLE"
+          ls -la $DEST_DIR  # 验证文件注入
+
+      # 修复点4：强制指定前端路径
       - name: Build Tauri
         run: |
           pnpm tauri build \
             --target $RUST_TARGET \
             --config "crates/gitbutler-tauri/tauri.conf.${{ github.event.inputs.channel }}.json" \
-            --verbose
-
-      # 修复点：更新 upload-artifact 到 v4+
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: tauri-arm64-${{ github.event.inputs.channel }}
-          path: |
-            src-tauri/target/${{ env.RUST_TARGET }}/release/bundle/*
-          retention-days: 7
+            --config.tauri.bundle.identifier "com.gitbutler.app" \
+            --config.tauri.build.frontendDist "$FRONTEND_DIST"
